welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (ab+bc=10 || ab+ac==10 || bc+ac==10)
              ^blueTicket:7: error: type mismatch;
 found   : String("10")
 required: Int
		return "10"
                       ^blueTicket:13: error: type mismatch;
 found   : String("5")
 required: Int
			return "5"
                               ^blueTicket:17: error: type mismatch;
 found   : String("0")
 required: Int
			return "0"
                               ^